--- a/Readme
+++ b/Readme
@@ -1,1 +1,1 @@
-idk man + spam
+[![Run on Repl.it](https://repl.it/badge/github/IsaacMattson/Text-Adventure-Game)](https://repl.it/github/IsaacMattson/Text-Adventure-Game)
